syntax = "proto3";

import "google/protobuf/empty.proto";

package chat;

// A service for client streaming chat messages
service ClientStreamingService {
  // A client stream for sending and receiving chat messages
  rpc ChatStream (stream ChatPacket) returns (stream ChatPacket) {}
}

// A service for persisting chat messages
service MessagePersistenceService {
  // A unary rpc to submit chat messages for persistence
  rpc PersistChatMessage (MessageToPersist) returns (google.protobuf.Empty) {}
}

// User-facing packet that can be streamed over the wire
message ChatPacket {
  oneof packet_type {
    // A request to join a chat room
    JoinChatRequest join_request = 1;
    // A chat message
    ChatMessage chat_message = 2;
  }
}

// A request to join a chat room
message JoinChatRequest {
  // The user's unique identifier
  string user_id = 1;
  // The name of the chat room to join
  string room_name = 2;
}

// A chat message
message ChatMessage {
  // The user's unique identifier
  string user_id = 1;
  // The message content
  string message = 2;
  // The timestamp of the message
  int64 timestamp = 3;
}

// A message that will be persisted for a specific chat room
message MessageToPersist {
  // The name of the chat room to which the message belongs
  string room_name = 1;
  // The chat message to persist
  ChatMessage message = 2;
}